--- a/stack.yaml
+++ b/stack.yaml
@@ -15,8 +15,8 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-8.9
-
+resolver: lts-17.5
+allow-newer: true
 # User packages to be built.
 # Various formats can be used as shown in the example below.
 #
