--- a/functional-compiler.cabal
+++ b/functional-compiler.cabal
@@ -12,7 +12,7 @@ category:            Compiler
 build-type:          Simple
 extra-source-files:  README.md
                      src/Tokens.x
-                     --src/Grammar.y
+                     src/Grammar.y
 cabal-version:       >=1.10
 
 library
@@ -52,8 +52,8 @@ test-suite functional-compiler-test
                      , hspec
                      , QuickCheck == 2.9.2
   other-modules:       LexerSpec
-                    -- , GrammarSpec
-                    -- , LibSpec
+                     , GrammarSpec
+                     --, LibSpec
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
