--- a/functional-compiler.cabal
+++ b/functional-compiler.cabal
@@ -19,7 +19,7 @@ library
   hs-source-dirs:      src
   exposed-modules:     Tokens
                        , Grammar
-                       --, Lib
+                       , Lib
   build-depends:       base >= 4.7 && < 5
                        , containers == 0.5.*
                        , pretty == 1.1.*
@@ -53,7 +53,7 @@ test-suite functional-compiler-test
                      , QuickCheck == 2.9.2
   other-modules:       LexerSpec
                      , GrammarSpec
-                     --, LibSpec
+                     , LibSpec
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
